[DevTools] Any module scripts should have correct start position

Modules generate fake script to report an import exception, this fake script should have correct start_position.

Bug: chromium:721589
Change-Id: Iac2aa91b9269210d39e834c5467e6ae071cce1e4
Reviewed-on: https://chromium-review.googlesource.com/521143
Reviewed-by: Kouhei Ueno <kouhei@chromium.org>
Reviewed-by: Hiroshige Hayashizaki <hiroshige@chromium.org>
Commit-Queue: Aleksey Kozyatinskiy <kozyatinskiy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#476418}
Former-commit-id: 65dcbb2ab5805377de065aaa1dbc87215df460f7